# diffink

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  temp.txt  temp1.txt  temp2.txt
Frontend/include/: ScriptExporter.h
Frontend/src/: Main.cpp  ScriptExporter.cpp
example/c/new/: main.c  move.c
example/c/old/: main.c  move.c
example/java/dest/: Main.java  MissingMove.java  Test.java
example/java/new/: Main.java  MissingMove.java
example/java/old/: Main.java  MissingMove.java  Test.java
example/java/src/: Main.java
frontend/include/: CommandLineInterface.h  ScriptExporter.h
frontend/src/: CommandLineInterface.cpp  Main.cpp  ScriptExporter.cpp
include/: DiffInk.h
include/AST/: HashNode.h  MerkleTree.h  RawNode.h  RawTree.h  ShallowMap.h  ShallowTree.h  SourceCode.h  VirtualTree.h
include/DiffInk/AST/: HashNode.h  MerkleTree.h  SourceCode.h  VirtualNode.h  VirtualNode.hpp  VirtualTree.h
include/DiffInk/Frontend/: CommandLineInterface.h  ScriptExporter.h
include/DiffInk/TreeDiff/: CompositeMatcher.h  EditAction.h  TreeDiff.h
include/DiffInk/TreeDiff/GumTree/: Comparator.h  DiceSimilarity.h  GreedyBottomUp.h  GreedyTopDown.h  HyperParameters.h
include/DiffInk/TreeDiff/GumTree/Recovery/: OptimalRecovery.h  SimpleRecovery.h
include/DiffInk/Utils/: SmartParser.h  TextDiff.h
include/Extra/: Exception.h
include/Parser/: CodeFile.h  Index.h  Parser.h  SourceCode.h  TextDiff.h
include/TreeDiff/: BaseTreeDiff.h  EditAction.h  MatchedNodes.h  Matcher.h
include/Utils/: NodeComp.h  SmartParser.h  TextDiff.h
lib/include/DiffInk/: Api.h
lib/include/DiffInk/AST/: HashNode.h  MerkleTree.h  SourceCode.h  VirtualNode.h
lib/include/DiffInk/TreeDiff/: CompositeMatcher.h  EditAction.h  TreeDiff.h
lib/include/DiffInk/TreeDiff/GumTree/: Comparator.h  GreedyBottomUp.h  GreedyTopDown.h  HyperParameters.h  OptimalBottomUp.h  SimpleBottomUp .h  SimpleBottomUp.h
lib/include/DiffInk/TreeDiff/GumTree/Recovery/: BaseRecovery.h  OptimalRecovery.h  SimpleRecovery.h
lib/include/DiffInk/TreeDiff/Metric/: ChawatheSimilarity.h  DiceSimilarity.h
lib/include/DiffInk/TreeDiff/Recovery/: OptimalRecovery.h  SimpleRecovery.h
lib/include/DiffInk/Utils/: NodeComp.h  TextDiff.h  XxhStl.h
lib/src/AST/: HashNode.cpp  MerkleTree.cpp  SourceCode.cpp
lib/src/TreeDiff/: CompositeMatcher.cpp  EditAction.cpp  TreeDiff.cpp
lib/src/TreeDiff/GumTree/: Comparator.cpp  DiceSimilarity.cpp  GreedyBottomUp.cpp  GreedyTopDown.cpp  OptimalBottomUp.cpp  SimpleBottomUp.cpp
lib/src/TreeDiff/GumTree/Recovery/: OptimalRecovery.cpp  SimpleRecovery.cpp
lib/src/TreeDiff/Metric/: ChawatheSimilarity.cpp  DiceSimilarity.cpp
lib/src/TreeDiff/Recovery/: OptimalRecovery.cpp  SimpleRecovery.cpp
lib/src/Utils/: NodeComp.cpp  TextDiff.cpp  XxhStl.cpp
logs/: New.html  Old.html  gumtree.json
scripts/: cmake.sh  debug.sh  release.sh
src/: Main.cpp
src/AST/: HashNode.cpp  MerkleTree.cpp  RawTree.cpp  ShallowTree.cpp  SourceCode.cpp  VirtualTree.cpp  VritualNode.cpp
src/Frontend/: CommandLineInterface.cpp  ScriptExporter.cpp
src/Parser/: CodeFile.cpp  SourceCode.cpp  TextDiff.cpp
src/TreeDiff/: BaseTreeDiff.cpp  CompositeMatcher.cpp  EditAction.cpp  Matcher.cpp  TreeDiff.cpp
src/TreeDiff/GumTree/: Comparator.cpp  DiceSimilarity.cpp  GreedyBottomUp.cpp  GreedyTopDown.cpp
src/TreeDiff/GumTree/Recovery/: OptimalRecovery.cpp  SimpleRecovery.cpp
src/Utils/: NodeComp.cpp  TextDiff.cpp
